# quicksilver

./: .gitignore  Makefile  README.md  main.c  private_queue.h  sink_queue.c  sink_queue.h  sink_test.c
benchmarks/: .gitignore  Makefile  Makefile.qs  common.r  concurrent_eve.r  concurrent_graph.r  eve_concurrent.csv  eve_parallel.csv  final_language_comparison_concurrency_results.csv  final_language_comparison_parallel_results.csv  gen_graphs.r  opt_concurrent.csv  opt_concurrent_graph.r  opt_parallel.csv  opt_parallel_graph.r  parallel_eve.r  parallel_graph.r  qs_variant_18-02-2014.csv  run.sh  run_all.py  variant_graph.r
benchmarks/concurrent/: Makefile
benchmarks/concurrent/cxx/: Makefile
benchmarks/concurrent/erlang/: .gitignore  Makefile
benchmarks/concurrent/haskell/: .gitignore  Makefile
benchmarks/concurrent/java/: .gitignore  Makefile
benchmarks/erlang/: Makefile
benchmarks/erlang/chameneos/: main.erl  run.sh
benchmarks/erlang/condition/: main.erl  run.sh
benchmarks/erlang/mutex/: main.erl
benchmarks/erlang/prodcons/: main.erl
benchmarks/erlang/threadring/: Makefile  main.erl
benchmarks/parallel/: Makefile
benchmarks/parallel/cxx/: Makefile
benchmarks/parallel/erlang/: .gitignore  Makefile
benchmarks/parallel/haskell/: .gitignore
benchmarks/parallel/qs/: .gitignore
benchmarks/qs/: .gitignore
benchmarks/qs/condition/: Makefile  data.e
benchmarks/qs/mutex/: Makefile
benchmarks/qs/threadring/: threadring_worker.e
c/: .gitignore  Makefile  Makefile.am  bounded_queue.c  bounded_queue.h  closure.c  closure.h  common.mk  configure.ac  ctx.c  ctx.h  executor.c  executor.h  libqs.pc.in  list.c  list.h  main.c  notifier.c  notifier.h  private_queue.c  private_queue.h  processor.c  processor.h  queue_impl.h  sink_queue.h  sync_ops.c  sync_ops.h  task.c  task.h  task_condition.c  task_condition.h  task_mutex.c  task_mutex.h  types.h
c/conc_queue/: Makefile  conc_queue.c  conc_queue.h  test.c
c/doc/: .gitignore  qs.dxy
c/experiments/timer_signal/: Makefile
c/experiments/user_thread_processor/: Makefile  executor.c
c/src/: .gitignore  Makefile.am  bounded_queue.c  bounded_queue.h  closure.c  ctx.c  debug_log.c  debug_log.cpp  executor.c  list.c  mpsc_blocking.c  mpsc_impl.c  mpscq.c  notifier.c  private_queue.c  probes.d  processor.c  processor.h  qoq.c  queue_impl.cpp  queue_impl.h  sched_task.c  spsc_queue.c  sync_ops.c  sync_ops.h  task.c  task_condition.c  task_condition.h  task_mutex.c  types.h  ws_deque.c
c/src/internal/: bounded_queue.h  ctx.h  executor.h  mpscq.h  qoq.h  queue_impl.h  sched_task.h  task.h  task_condition.h  task_mutex.h  ws_deque.h
c/src/libqs/: bounded_queue.h  closure.h  debug_log.h  executor.h  maybe.h  mpsc_blocking.h  mpsc_impl.h  mpscq.h  private_queue.h  processor.h  qoq.h  sched_task.h  spsc_queue.h  sync_ops.h  task.h  task_condition.h  task_mutex.h  types.h  ws_deque.h
c/tests/: Makefile  Makefile.am  common.mk
c/tests/basic/: basic  basic.c
c/tests/cv/: cv  cv.c
c/tests/data_layer/: mpscq.cpp  work_stealing.cpp
c/tests/mutex/: mutex  mutex.c
c/tests/perf_condition/: Makefile  perf_condition.c
c/tests/perf_mutex/: perf_mutex.c
c/tests/process_layer/: process.cpp
c/tests/sched_layer/: executor.cpp  sched_layer.cpp  stask.cpp  sync_data.cpp  wake.cpp
c/tests/sleep/: sleep  sleep.c
c/tests/switch/: switch.c
c/tests/sync_layer/: condvar.cpp  mutex.cpp
c/tests/task_layer/: task_layer.cpp
c/tests/unwind/: stack_walk.cpp
c/tests/wait_query/: .gitignore  Makefile  wait_query.c
c/timer_signal/: main.c
c/user_thread_processor/: Makefile  executor.c  executor.h  list.h  main.c  notifier.c  notifier.h  processor.c  processor.h  task.c  task.h  types.h  work_list.c  work_list.h
c/user_threads/: Makefile  main.c
compiler/: Main.hs  quicksilver.cabal
compiler/Language/QuickSilver/: Parser.hs  Position.hs  PrettyPrint.hs  Summary.hs  Syntax.hs  Util.hs
compiler/Util/: Monad.hs
compiler/exec/: Main.hs
compiler/tests/: .gitignore  Makefile  array_test.e  c.e  condition_test.e  condition_worker.e  consumer_worker.e  data.e  dummy.e  externals.c  helloworld.e  http_test.e  incr.e  multi_reserve.e  multi_setter.e  mutex_test.e  noshare_test.e  noshare_worker.e  odd_even_test.e  outer_test.e  outer_worker.e  passive1.e  prelude.e  prod_cons_test.e  prodcons_test.e  producer_worker.e  product_test.e  qsc  randmat_test.e  randmat_worker.e  separate_test.e  share_test.e  share_worker.e  socket_test.e  threadring_test.e  threadring_worker.e  thresh_histogram.e  thresh_test.e  token.e  winnow_sort.e  (+4 more)
compiler/tests/debug/: Makefile  debug.c  prod_cons_test.ll
compiler/tests/lib/: Makefile  array.e  array_inner.e  externals.c  file.e  int_array.e  int_matrix.e  int_stack.e  int_stack_link.e  pointer.e  pointer_64.e  pointer_8.e  prelude.e  real_array.e  real_math.e  real_matrix.e  separate_utils.e  socket.e  socket_buffer.e  socket_util.e  string.e
llvm_hoist_sync_pass/: .gitignore  CMakeLists.txt  LiftSync.cpp  Makefile
llvm_hoist_sync_pass/tests/: README.txt  branch_multi_proc_alias.ll  branch_multi_proc_no_alias.ll  branch_single_proc.ll  lit.cfg  loop_single_proc.ll  straight_line.ll  test1.c
llvm_qsgc/: CMakeLists.txt  Makefile  QsGCPrinter.cpp
llvm_qsgc/qsgc_test/: Makefile  main.cpp  sample.ll  stack_map.cpp  stack_map.h
notes/: .gitignore  Traces.v  bibfile.bib  notes.tex
runtime/: .gitignore  Makefile.am  configure.ac
runtime/experiments/user_thread_processor/: list.c
runtime/src/: Makefile.am  ctx.c  debug_log.cpp  io_manager.c  mpscq.c  private_queue.c  processor.c  qoq.c  sched_task.c  spsc_queue.c  spsc_queue.cpp  sync_ops.c  task_mutex.c  trace.h  ws_deque.c
runtime/src/internal/: debug_log.h  mpscq.h  qoq.h  spsc_queue.h  task_condition.h  ws_deque.h
runtime/src/libqs/: closure.h  io_manager.h  notifier.h  private_queue.h  processor.h  sched_task.h  sync_ops.h  types.h
runtime/tests/: Makefile.am
runtime/tests/data_layer/: work_stealing.cpp
runtime/tests/io_mgr/: io_mgr.cpp
runtime/tests/sched_layer/: stask.cpp
(+237 files in other folders)
